--- a/index.html
+++ b/index.html
@@ -72,22 +72,23 @@
       <!-- Slide One - Set the background image for this slide in the line below -->
       <div class="carousel-item active" style="background-image: url('img/home-slider/slider-1.jpg')">
         <div class="carousel-caption  d-lg-block">
-          <h3>Научно-исследовательские и опытно-конструкторские работы в сфере транспорта</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Контроль состояния объектов дорожной инфраструктуры</h3>
+          <p>Создание системы построения и использования трехмерных цифровых моделей местности для проектирования, реконструкции и контроля состояния объектов дорожной инфраструктуры с использованием навигационных технологий ГЛОНАСС/GPS</p>
         </div>
       </div>
       <!-- Slide Two - Set the background image for this slide in the line below -->
       <div class="carousel-item" style="background-image: url('img/home-slider/slider-2.jpg')">
         <div class="carousel-caption  d-lg-block">
-          <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Управление Ж/Д перевозками</h3>
+          <p>Создание системы управления движением железнодорожных составов в соответствии со стандартами</p>
+          <p>Создание многоуровневой системы контроля и управления железнодорожными перевозками опасных грузов</p>
         </div>
       </div>
       <!-- Slide Three - Set the background image for this slide in the line below -->
       <div class="carousel-item" style="background-image: url('img/home-slider/slider-3.jpg')">
         <div class="carousel-caption  d-lg-block">
-          <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Весовой контроль</h3>
+          <p>Разработка системы определения весогабаритных характеристик транспортных средств движущихся в режиме свободного потока по автомобильным дорогам</p>
         </div>
       </div>
     </div>
@@ -106,122 +107,55 @@
 
 <!-- About Section -->
 <div class="w3-container" style="padding:128px 16px" id="about">
-  <h3 class="w3-center">О компании НИЦТТ</h3>
+  <h3 class="w3-center">НИЦТТ - научно-исследовательский центр технологий телематики</h3>
   <p class="w3-center w3-large">Прогрессивные техноголии транспорта</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-quarter">
-      <i class="ti-car w3-margin-bottom w3-jumbo"></i>
+      <i class="ti-desktop w3-margin-bottom w3-jumbo"></i>
       <p class="w3-large">Программное обеспечение</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      <p>Поможем реализовать сложные проекты, связанные с разработкой ПО.</p>
     </div>
     <div class="w3-quarter">
-      <i class="ti-video-camera w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Видеонаблюдение</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      <i class="ti-plug w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Схемотехника</p>
+      <p>Спроектируем электронные схемы, и напишем программы для микроконтроллеров.</p>
     </div>
     <div class="w3-quarter">
-      <i class="ti-truck w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Программное обеспечение</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      <i class="ti-map-alt w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Дороги</p>
+      <p>Построим точные 3D модели объектов дорожной инфраструктуры методом лазерного сканирования и аэрофотосъемки.</p>
     </div>
     <div class="w3-quarter">
-      <i class="ti-timer w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Видеонаблюдение</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-    </div>
-  </div>
-</div>
-
-<!-- Promo Section -->
-<div class="w3-container w3-light-grey" style="padding:128px 16px">
-  <div class="w3-row-padding">
-    <div class="w3-col m6">
-      <h3>Прогрессивные техноголии транспорта.</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-      <p><a href="#work" class="w3-button blue_button"><i class="fa fa-th"> </i> Наши проекты</a></p>
-    </div>
-    <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="img/feature-right.jpg" alt="">
-    </div>
-  </div>
-</div>
-
-<!-- Team Section -->
-<div class="w3-container" style="padding:128px 16px" id="team">
-  <h3 class="w3-center">Команда</h3>
-  <p class="w3-center w3-large">Lorem ipsum dolor sit amet</p>
-  <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="_" alt="" style="width:100%">
-        <div class="w3-container">
-          <h3>Антон Пудеев</h3>
-          <p class="w3-opacity">Генеральный директор</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Сообщение</button></p>
-        </div>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="_" alt="" style="width:100%">
-        <div class="w3-container">
-          <h3>Иван Петров</h3>
-          <p class="w3-opacity">Программист</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Сообщение</button></p>
-        </div>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="_" alt="" style="width:100%">
-        <div class="w3-container">
-          <h3>Петр Иванов</h3>
-          <p class="w3-opacity">Дизайнер</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Сообщение</button></p>
-        </div>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="_" alt="" style="width:100%">
-        <div class="w3-container">
-          <h3>Анна Петрова</h3>
-          <p class="w3-opacity">Менеджер</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Сообщение</button></p>
-        </div>
-      </div>
+      <i class="ti-dashboard w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Весовой контроль</p>
+      <p>Произведем поставку, монтаж и пусконаладку оборудования для контроля весогабаритных характеристик транспорта.</p>
     </div>
   </div>
 </div>
 
 <!-- Promo Section "Statistics" -->
-<div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
+<div class="w3-container w3-row w3-center w3-padding-64 stats">
   <div class="w3-quarter">
-    <span class="w3-xxlarge">14+</span>
-    <br>партнеров
+    <span>150 млн</span>
+    <p>годовой оборот</p>
   </div>
   <div class="w3-quarter">
-    <span class="w3-xxlarge">55+</span>
-    <br>выполненных проектов
+    <span>10</span>
+    <p>человек в команде</p>
   </div>
   <div class="w3-quarter">
-    <span class="w3-xxlarge">89+</span>
-    <br>довольных клиентов
+    <span>3</span>
+    <p>года на рынке</p>
   </div>
   <div class="w3-quarter">
-    <span class="w3-xxlarge">150+</span>
-    <br>выставок
+    <span>10+</span>
+    <p>готовых проектов</p>
   </div>
 </div>
 
+
 <!-- Work Section -->
-<div class="w3-container" style="padding:128px 16px" id="work">
+<!-- <div class="w3-container" style="padding:128px 16px" id="work">
   <h3 class="w3-center">Наши проекты</h3>
   <p class="w3-center w3-large">What we've done for people</p>
 
@@ -254,6 +188,89 @@
       <img src="/w3images/tech_tableturner.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tableturner">
     </div>
   </div>
+</div> -->
+
+<!-- Promo Section -->
+<div class="w3-container w3-light-grey" style="padding:128px 16px">
+  <div class="w3-row-padding">
+    <div class="w3-col m6">
+      <h3>Прогрессивные техноголии транспорта</h3>
+      <p>Мы – профессиональная команда понимающая потребности наших партнеров и сферы деятельности, в которой мы работаем, а также, имеющая внушительный опыт успешной реализации интересных проектов. Вместе с вами мы растём и развиваемся. Вы даёте нам возможность думать и оставаться любопытными.</p>
+      <p><a href="#work" class="w3-button blue_button"><i class="fa fa-th"> </i> Наши проекты</a></p>
+    </div>
+    <div class="w3-col m6">
+      <img class="w3-image w3-round-large" src="img/feature-right.jpg" alt="">
+    </div>
+  </div>
+</div>
+
+<!-- Projects Section -->
+<div class="w3-container" style="padding:128px 16px" id="team">
+  <h3 class="w3-center">Проекты</h3>
+  <p class="w3-center w3-large">Исследуем новые горизонты и реализуем необычные проекты</p>
+  <!-- <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-card">
+        <img src="_" alt="" style="width:100%">
+        <div class="w3-container">
+          <h3>ЦММ «Дорога»</h3>
+          <p class="w3-opacity">Генеральный директор</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Сообщение</button></p>
+        </div>
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-card">
+        <img src="_" alt="" style="width:100%">
+        <div class="w3-container">
+          <h3>Иван Петров</h3>
+          <p class="w3-opacity">Программист</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Сообщение</button></p>
+        </div>
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-card">
+        <img src="_" alt="" style="width:100%">
+        <div class="w3-container">
+          <h3>Петр Иванов</h3>
+          <p class="w3-opacity">Дизайнер</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Сообщение</button></p>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src="img/scanning.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">ЦММ «Дорога»</h5>
+      <p class="card-text">Целью проекта является создание трёхмерных цифровых моделей местности и использование этой информации для выполнения изыскательских работ, проектирования, строительства, эксплуатации и реконструкции объектов дорожной инфраструктуры за счёт разработки аппаратно-программных комплексов (АПК), создания и использования цифровых моделей местности с помощью технологий ГЛОНАСС/GPS.</p>
+      <p><a href="#work" class="w3-button blue_button"><i class="fa fa-info-circle"> </i> Подробнее о проекте</a></p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="img/trains.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Спецмониторинг-ЖД</h5>
+      <p class="card-text">Проект направлен на разработку системы контроля перевозки опасных грузов на железных дорогах. Основой системы являются комплекс бортового оборудования и беспроводные датчики, разработанные нашими специалистами. Оборудование монтируется на ЖД вагоны и позволяет дистанционно контролировать технологические параметры перевозимых грузов.</p>
+      <p><a href="#work" class="w3-button blue_button"><i class="fa fa-info-circle"> </i> Подробнее о проекте</a></p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="img/sand-truck.jpg" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Контроль движения ТС с поднятым кузовом</h5>
+      <p class="card-text">Необходимостью в разработке данной системы послужили статистические данные о том, что водители довольно часто забывают опустить кузов грузовика, что может привести к крупным разрушениям дорожных объектов или, что еще хуже к гибели людей.</p>
+      <p><a href="#work" class="w3-button blue_button"><i class="fa fa-info-circle"> </i> Подробнее о проекте</a></p>
+    </div>
+  </div>
+</div>
+
 </div>
 
 <!-- Modal for full size images on click-->
@@ -265,98 +282,30 @@
   </div>
 </div>
 
-<!-- Skills Section -->
-<div class="w3-container w3-light-grey w3-padding-64">
+<!-- Promo Section -->
+<div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>Lorem ipsum</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-      tempor incididunt ut labore et dolore.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-      tempor incididunt ut labore et dolore.</p>
+      <h3>Комплексная ителлектуальная транспортная система (КИТС)</h3>
+      <p>ООО «НИЦТТ» начинает масштабную работу направленную на разработку комплексной интеллектуальной транспортной системы (КИТС), которая войдет в основу работы всего транспортного комплекса Российской Федерации, и объединит уже имеющиеся разработки и подсистемы в этой области в единое целое.</br>Создание КИТС входит в целевую программу «Поддержание, развитие и использование системы ГЛОНАСС на 2012-2020 годы», утвержденную постановлением Правительства Российской Федерации от 3 марта 2012 года. No189.</p>
+      <p><a href="#work" class="w3-button blue_button"><i class="fa fa-info-circle"> </i> Подробнее о проекте</a></p>
     </div>
     <div class="w3-col m6">
-      <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Photography</p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div>
-      </div>
-      <p class="w3-wide"><i class="fa fa-desktop w3-margin-right"></i>Web Design</p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:85%">85%</div>
-      </div>
-      <p class="w3-wide"><i class="fa fa-photo w3-margin-right"></i>Photoshop</p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:75%">75%</div>
-      </div>
+      <img class="w3-image w3-round-large" src="img/feature-right.jpg" alt="">
     </div>
   </div>
 </div>
 
-<!-- Pricing Section -->
-<!-- <div class="w3-container w3-center w3-dark-grey" style="padding:128px 16px" id="pricing">
-  <h3>PRICING</h3>
-  <p class="w3-large">Choose a pricing plan that fits your needs.</p>
-  <div class="w3-row-padding" style="margin-top:64px">
-    <div class="w3-third w3-section">
-      <ul class="w3-ul w3-white w3-hover-shadow">
-        <li class="w3-black w3-xlarge w3-padding-32">Basic</li>
-        <li class="w3-padding-16"><b>10GB</b> Storage</li>
-        <li class="w3-padding-16"><b>10</b> Emails</li>
-        <li class="w3-padding-16"><b>10</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
-        <li class="w3-padding-16">
-          <h2 class="w3-wide">$ 10</h2>
-          <span class="w3-opacity">per month</span>
-        </li>
-        <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black w3-padding-large">Sign Up</button>
-        </li>
-      </ul>
-    </div>
-    <div class="w3-third">
-      <ul class="w3-ul w3-white w3-hover-shadow">
-        <li class="w3-red w3-xlarge w3-padding-48">Pro</li>
-        <li class="w3-padding-16"><b>25GB</b> Storage</li>
-        <li class="w3-padding-16"><b>25</b> Emails</li>
-        <li class="w3-padding-16"><b>25</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
-        <li class="w3-padding-16">
-          <h2 class="w3-wide">$ 25</h2>
-          <span class="w3-opacity">per month</span>
-        </li>
-        <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black w3-padding-large">Sign Up</button>
-        </li>
-      </ul>
-    </div>
-    <div class="w3-third w3-section">
-      <ul class="w3-ul w3-white w3-hover-shadow">
-        <li class="w3-black w3-xlarge w3-padding-32">Premium</li>
-        <li class="w3-padding-16"><b>50GB</b> Storage</li>
-        <li class="w3-padding-16"><b>50</b> Emails</li>
-        <li class="w3-padding-16"><b>50</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
-        <li class="w3-padding-16">
-          <h2 class="w3-wide">$ 50</h2>
-          <span class="w3-opacity">per month</span>
-        </li>
-        <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black w3-padding-large">Sign Up</button>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div> -->
-
 <!-- Contact Section -->
-<div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
+<div class="w3-container" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">Контакты</h3>
   <p class="w3-center w3-large">Отправить сообщение:</p>
-  <div style="margin-top:48px">
+  <div class="w3-col-3"style="margin-top:48px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Москва, Россия</p>
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Тел.: +7 123 456</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
-    <br>
+  </div>
+  <div class="w3-col-5">
     <form action="/action_page.php" target="_blank">
       <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
@@ -368,15 +317,17 @@
         </button>
       </p>
     </form>
+  </div>
     <!-- Image of location/map -->
+<div>
     <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
   </div>
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-64">
+<footer class="w3-center w3-light-grey w3-padding-64">
   <div class="container">
-    <p class="m-0 text-center text-white"> &copy;<script>document.write(new Date().getFullYear());</script> Все права защищены. | ООО "НИЦТТ"</p>
+    <p class="m-0 text-center"> &copy;<script>document.write(new Date().getFullYear());</script> Все права защищены. | ООО "НИЦТТ"</p>
   </div>
 </footer>
 
