--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <a href="#home" class="w3-bar-item w3-button w3-wide"><img border="0" alt="НИЦТТ" src="img/logo.png"></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">О компании</a>
-      <a href="#team" class="w3-bar-item w3-button">Услуги</a>
-      <a href="#pricing" class="w3-bar-item w3-button">Проекты</a>
+      <a href="#service" class="w3-bar-item w3-button">Услуги</a>
+      <a href="#company" class="w3-bar-item w3-button">Компания</a>
+      <a href="#projects" class="w3-bar-item w3-button">Проекты</a>
       <a href="#contact" class="w3-bar-item w3-button">Контакты</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -35,10 +35,10 @@
 
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">О компании</a>
-  <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">Услуги</a>
-  <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">Проекты</a>
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Закрыть ×</a>
+  <a href="#service" onclick="w3_close()" class="w3-bar-item w3-button">Услуги</a>
+  <a href="#company" onclick="w3_close()" class="w3-bar-item w3-button">Компания</a>
+  <a href="#projects" onclick="w3_close()" class="w3-bar-item w3-button">Проекты</a>
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">Контакты</a>
 </nav>
 
@@ -106,7 +106,7 @@
 
 
 <!-- About Section -->
-<div class="w3-container" style="padding:128px 16px" id="about">
+<div class="w3-container" style="padding:128px 16px" id="service">
   <h3 class="w3-center">НИЦТТ - научно-исследовательский центр технологий телематики</h3>
   <p class="w3-center w3-large">Прогрессивные техноголии транспорта</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
@@ -134,7 +134,7 @@
 </div>
 
 <!-- Promo Section "Statistics" -->
-<div class="w3-container w3-row w3-center w3-padding-64 stats">
+<div class="w3-container w3-row w3-center w3-padding-64 stats" id="company">
   <div class="w3-quarter">
     <span>150 млн</span>
     <p>годовой оборот</p>
@@ -154,42 +154,6 @@
 </div>
 
 
-<!-- Work Section -->
-<!-- <div class="w3-container" style="padding:128px 16px" id="work">
-  <h3 class="w3-center">Наши проекты</h3>
-  <p class="w3-center w3-large">What we've done for people</p>
-
-  <div class="w3-row-padding" style="margin-top:64px">
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_mic.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_phone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_drone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_sound.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
-    </div>
-  </div>
-
-  <div class="w3-row-padding w3-section">
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_tablet.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tablet">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_camera.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A camera">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_typewriter.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A typewriter">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_tableturner.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tableturner">
-    </div>
-  </div>
-</div> -->
-
 <!-- Promo Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
@@ -205,44 +169,9 @@
 </div>
 
 <!-- Projects Section -->
-<div class="w3-container" style="padding:128px 16px" id="team">
+<div class="w3-container" style="padding:128px 16px" id="projects">
   <h3 class="w3-center">Проекты</h3>
   <p class="w3-center w3-large">Исследуем новые горизонты и реализуем необычные проекты</p>
-  <!-- <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="_" alt="" style="width:100%">
-        <div class="w3-container">
-          <h3>ЦММ «Дорога»</h3>
-          <p class="w3-opacity">Генеральный директор</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Сообщение</button></p>
-        </div>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="_" alt="" style="width:100%">
-        <div class="w3-container">
-          <h3>Иван Петров</h3>
-          <p class="w3-opacity">Программист</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Сообщение</button></p>
-        </div>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="_" alt="" style="width:100%">
-        <div class="w3-container">
-          <h3>Петр Иванов</h3>
-          <p class="w3-opacity">Дизайнер</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Сообщение</button></p>
-        </div>
-      </div>
-    </div>
-  </div> -->
 
 <div class="card-deck">
   <div class="card">
@@ -273,14 +202,6 @@
 
 </div>
 
-<!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright" title="Close Modal Image">×</span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
-</div>
 
 <!-- Promo Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
@@ -296,33 +217,52 @@
   </div>
 </div>
 
+
+
 <!-- Contact Section -->
-<div class="w3-container" style="padding:128px 16px" id="contact">
+<div class="w3-container" id="contact">
   <h3 class="w3-center">Контакты</h3>
-  <p class="w3-center w3-large">Отправить сообщение:</p>
-  <div class="w3-col-3"style="margin-top:48px">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Москва, Россия</p>
-    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Тел.: +7 123 456</p>
-    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
+  <div class="w3-row-padding w3-center" style="margin-top:48px">
+    <div class="w3-col m4"><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> 115280, Москва, ул.Ленинская Слобода, д.26, стр.28 БЦ «Слободской»</div>
+    <div class="w3-col m4"><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Тел.: +7 (499) 707-26-54</div>
+    <div class="w3-col m4"><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: info@nictt.ru</div>
   </div>
-  <div class="w3-col-5">
-    <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
-      <p>
-        <button class="w3-button w3-black" type="submit">
-          <i class="fa fa-paper-plane"></i> Отправить сообщение
-        </button>
-      </p>
-    </form>
+
+<div>
+    <p class="w3-center w3-large email_form">Отправить сообщение:</p>
+    <div class="container">
+  <form action="action_page.php">
+
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+    </select>
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div>
+
+
   </div>
     <!-- Image of location/map -->
 <div>
     <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
   </div>
 </div>
+
+
 
 <!-- Footer -->
 <footer class="w3-center w3-light-grey w3-padding-64">
